Scroll to top button RTL alignment fix

--- a/assets/css/rtl.css
+++ b/assets/css/rtl.css
@@ -16,6 +16,11 @@ section:not(.landing) .content-head .section-subtitle {
     margin-right: unset !important;
 }
 
+.btn.btn-scroll-top {
+    right: unset !important;
+    left: 2rem;
+}
+
 input {
     direction: rtl !important;
 }
